--- a/fisherman game gorilla/Pilot Analysis.ipynb
+++ b/fisherman game gorilla/Pilot Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1002,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21610,7 +21610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1158,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21619,16 +21619,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1162,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mark = [88/100, 64/100, 60/100, 60/100, 75/100]"
+    "mark = [88/100, 64/100, 62/100, 74/100, 72/100]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1163,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21637,16 +21646,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1164,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7266666666666666"
+       "0.72"
       ]
      },
-     "execution_count": 1164,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
